# wurzelbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.MD  README.md  cronjob.yaml  main.py  pylintrc  pyproject.toml
.github/workflows/: docker-image-tag.yml  docker-image.yml
config/: .env.example  example_config.yaml
tests/: test_http_connection.py  test_parsing_utils.py
wurzelbot/: __main__.py  bees_farm.py  config.py  garden.py  http_connection.py  login_data.py  marketplace.py  message.py  messenger.py  notes.py  offer.py  parsing_utils.py  product.py  product_information.py  product_names.json  quest.py  session.py  stock.py  town_park.py  user.py  wimp.py  wurzelbot.py
